--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
@@ -27,5 +28,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "Clicky Game! is a memory game utilizing React. The goal of the game is to click on each avatar image only once. Everytime a user clicks on an image the images will shuffle, thus making it difficult to remember which ones were already clicked!",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abalomenos/react-clicky_game.git"
+  },
+  "author": "Argiris Balomenos",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/abalomenos/react-clicky_game/issues"
+  },
+  "homepage": "https://abalomenos.github.io/react-clicky_game/"
 }
