--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-clicky_game",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
