Github Pages deploy

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-clicky_game",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
+  "homepage": "https://abalomenos.github.io/react-clicky_game/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
@@ -11,7 +12,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "yarn run build",
-    "deploy": "master -d build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -42,6 +43,5 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/abalomenos/react-clicky_game/issues"
-  },
-  "homepage": "https://abalomenos.github.io/react-clicky_game/"
+  }
 }
