--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-clicky_game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://abalomenos.github.io/react-clicky_game/",
+  "homepage": "https://abalomenos.github.io/react-clicky_game",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
